--- a/evdekinisatcom.MvcWebApp.WebMvc/evdekinisatcom.MvcWebApp.WebMvc.csproj
+++ b/evdekinisatcom.MvcWebApp.WebMvc/evdekinisatcom.MvcWebApp.WebMvc.csproj
@@ -24,4 +24,14 @@
     <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\Privacy.cshtml" />
+    <None Include="Views\Product\Create.cshtml" />
+    <None Include="Views\Product\Details.cshtml" />
+    <None Include="Views\Product\Edit.cshtml" />
+    <None Include="Views\Product\Index.cshtml" />
+    <None Include="Views\Shared\Components\Category\Default.cshtml" />
+  </ItemGroup>
+
 </Project>
