--- a/evdekinisatcom.MvcWebApp.Entity/evdekinisatcom.MvcWebApp.Entity.csproj
+++ b/evdekinisatcom.MvcWebApp.Entity/evdekinisatcom.MvcWebApp.Entity.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Exchange.WebServices" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.11" />
   </ItemGroup>
 
